--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass": "^1.77.8",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.7.2"
+    "vuetify": "^2.7.2",
+    "wanakana": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
